create product List mock and product list view

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,15 @@
-<p>welcome works!</p>
+<div class="welcomeLogoText">
+    <div>
+        <img src="../../assets/welcome.jpg" alt="welcome image" />
+    </div>
+    <div class="welcomeText mat-typographie">
+        <h1>Welcome to the best tool store</h1>
+    </div>
+</div>
+<div>
+    <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+        <mat-button-toggle value="products">Products</mat-button-toggle>
+        <mat-button-toggle value="contact">Contact</mat-button-toggle>
+        <mat-button-toggle value="signIn">Sign Up</mat-button-toggle>
+    </mat-button-toggle-group>
+</div>
